--- a/index.html
+++ b/index.html
@@ -5,40 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <main>
       <section class="subscribe-section">
         <div class="container sub-container">
-          <picture>
+            <picture>
             <source
               srcset="
-                ./images/banan-des-1x.jpg 1x,
-                ./images/banan-des-2x.jpg 2x
+                ./images/background2-desktop-1280-200-1x.png 1x,
+                ./images/background2-desktop-1280-200-2x.png 2x
               "
               media="(min-width:1280px)"
             />
             <source
               srcset="
-                ./images/banan-tab-1x.jpg 1x,
-                ./images/banan-tab-2x.jpg 2x
+                ./images/background2-tablet-768-100-1x.png 1x,
+                ./images/background2-tablet-768-100-2x.png 2x
               "
               media="(min-width:768px)"
             />
             <source
               srcset="
-                ./images/banan-mob-1x.jpg 1x,
-                ./images/banan-mob-2x.jpg 2x
+                ./images/background2-mob-480-1x.png 1x,
+                ./images/background2-mob-480-2x.png 2x
+              "
+              media="(min-width:480px)"
+            />
+            <source
+              srcset="
+                ./images/background2-mob-320-1x.png 1x,
+                ./images/background2-mob-320-2x.png 2x
+              "
+              media="(max-width:479px)"
+            />
+            <img
+              src="./images/background2-desktop-1280-200-1x.png"
+              alt="Банан"
+              class="bac-image"
+            />
+          </picture>
+          <picture>
+            <source
+              srcset="
+                ./images/banan-des-1x.png 1x,
+                ./images/banan-des-2x.png 2x
+              "
+              media="(min-width:1280px)"
+            />
+            <source
+              srcset="
+                ./images/banan-tab-1x.png 1x,
+                ./images/banan-tab-2x.png 2x
+              "
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="
+                ./images/banan-mob-1x.png 1x,
+                ./images/banan-mob-2x.png 2x
               "
               media="(max-width:767px)"
             />
             <img
-              src="./images/banan-des-1x.jpg"
+              src="./images/banan-des-1x.png"
               alt="Банан"
               class="sub-image"
             />
